
- Removed AMD_Array_Object_ice_invoke class and instead added an
  ice_response method to AMD_Object_ice_invoke that uses the array
  type.

- The system logger (enabled when Ice.UseSyslog is set) now uses the 
  value of Ice.ProgramName as the log identifier prefix.

- Fixed crash if Application::main() or Service::main() were called 
  with argc == 0.


Java Changes
============

- Added support for using direct buffers in the transport layer to
  minimize copying. The semantics of the Ice.CacheMessageBuffers
  property have been extended as follows:

  0 = no buffer caching
  1 = buffer caching using non-direct buffers
  2 = buffer caching using direct buffers

  If this property is not defined, the new default value is 2.

- The Ice runtime now re-throws exceptions using fillInStackTrace to
  ensure the exception stack trace includes the calling point.

- Added the "classLoader" member to Ice.InitializationData, which
  allows you to supply a custom class loader that Ice will use when
  it loads plug-ins, user exceptions, concrete Slice classes, etc.

- Fixed a bug in the implementation of ice_invoke_async.

- The Freeze classes are now stored in a separate JAR file named
  Freeze.jar.

- The translator no longer generates one-shot constructors for class,
  struct and exception types if doing so would exceed Java's limit of
  255 parameters for a method.

- Fixed a bug where an outgoing SSL connection was allowed even though
  certificate validation failed.

- A holder class generated for a Slice class or interface now extends
  the generic base class Ice.ObjectHolderBase and implements the
  streaming interface Ice.ReadObjectCallback.

- slice2java no longer generates a <name>OperationsNC interface for
  local interfaces and classes. This makes the code easier to browse
  with IDEs.

- slice2java now preserves javadoc comments that appear in the Slice
  source and writes them through to the corresponding APIs in the
  generated code.
